--- a/bower.json
+++ b/bower.json
@@ -9,16 +9,22 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "bootswatch": "~3.1.1",
+    "bootstrap-datepicker": "~1.3",
     "bootstrap-tagsinput": "~0.3.9",
     "bootstrap-select": "~1.5.2",
     "bootstrap-spinner": "~1.1",
     "bootstrap-switch": "~3.0.0",
+    "bootswatch": "~3.1.1",
+    "bootswatch-html": "~1.0",
+    "ckeditor": "~4.3.4",
+    "datatables": "~1.9.4",
     "font-awesome": "~4.0.3",
-    "holderjs": "~2.3.2",
     "html5shiv": "~3.7.0",
     "indigo-bootstrap": "latest",
     "jasny-bootstrap": "~3.1.1",
+    "jquery": "~1.10.2",
+    "modernizr": "~2.6.2",
+    "moment": "~2.5.1",
     "respond": "~1.4.2"
   }
 }
