--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "bootstrap-datepicker": "~1.3",
-    "bootstrap-tagsinput": "~0.3.9",
-    "bootstrap-select": "~1.5.2",
-    "bootstrap-spinner": "~1.1",
-    "bootstrap-switch": "~3.0.0",
+    "bootstrap-html": "~1.0",
     "bootswatch": "~3.1.1",
     "bootswatch-html": "~1.0",
     "ckeditor": "~4.3.4",
