Full package redesign

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
-    "name": "indigophp/indigo-design",
-    "description": "IndigoPHP default theme design",
-    "license": "MIT",
-    "homepage": "https://indigophp.com",
-    "authors": [
-        {
-            "name": "Márk Sági-Kazár",
-            "email": "mark.sagikazar@gmail.com"
-        }
-    ]
+	"name": "indigophp/design",
+	"description": "IndigoPHP default theme design",
+	"license": "MIT",
+	"homepage": "https://indigophp.com",
+	"authors": [
+		{
+			"name": "Tamás Barta",
+			"email": "barta.tamas.d@gmail.com"
+		},
+		{
+			"name": "Márk Sági-Kazár",
+			"email": "mark.sagikazar@gmail.com"
+		}
+	]
 }
