--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,39 @@
 {
-  "name": "indigo-theme",
-  "version": "1.0.0",
-  "ignore": [
-    "bower_components",
-    ".gitignore",
-    "Gruntfile.js",
-    "package.json"
-  ],
-  "dependencies": {
-    "bootbox": "~4.3.0",
-    "bootstrap": "~3.2.0",
-    "bootstrap-html": "~1.0",
-    "bootswatch": "~3.2.0",
-    "bootswatch-html": "~1.0",
-    "ckeditor": "~4.3.4",
-    "datatables": "~1.10.0",
-    "datatables-plugins": "*",
-    "font-awesome": "~4.0.3",
-    "html5shiv": "~3.7.0",
-    "jquery": "~1.11.0",
-    "jquery-migrate": "~1.2.1",
-    "modernizr": "~2.6.2",
-    "moment": "~2.5.1",
-    "respond": "~1.4.2"
-  },
-  "resolutions": {
-    "jquery": "~1.11.0"
-  }
+	"name": "indigo-design",
+	"version": "1.0.0",
+	"authors": [
+		"Tamás Barta <barta.tamas.d@gmail.com>",
+		"Márk Sági-Kazár <mark.sagikazar@gmail.com>"
+	],
+	"license": "MIT",
+	"private": true,
+	"ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components"
+	],
+	"dependencies": {
+		"bootbox": "~4.3.0",
+		"bootstrap": "3.3.1",
+		"bootstrap-datepicker": "~1.3.0",
+		"bootstrap-tagsinput": "~0.4.0",
+		"bootstrap-select": "~1.6.0",
+		"bootstrap-touchspin": "~3.0.0",
+		"bootstrap-switch": "~3.3.0",
+		"bootswatch": "3.3.1",
+		"ckeditor": "~4.3.4",
+		"datatables": "~1.10.0",
+		"datatables-plugins": "*",
+		"font-awesome": "~4.1.0",
+		"html5shiv": "~3.7.0",
+		"jasny-bootstrap": "~3.1.1",
+		"jquery": "~1.11.0",
+		"jquery-migrate": "~1.2.1",
+		"modernizr": "~2.8.0",
+		"moment": "~2.8.0",
+		"respond": "~1.4.0"
+	},
+	"resolutions": {
+		"jquery": "~1.11.2"
+	}
 }
