--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "indigo-theme",
-  "description": "Indigo theme",
-  "version": "1.0.0",
-  "homepage": "http://indigophp.com",
-  "author": "Tamás Barta",
-  "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-contrib-clean": "~0.5",
-    "grunt-contrib-concat": "~0.3",
-    "grunt-contrib-copy": "~0.5",
-    "grunt-contrib-uglify": "~0.4",
-    "grunt-contrib-watch": "~0.6",
-    "grunt-contrib-less": "~0.10",
-    "grunt-processhtml": "~0.3",
-    "grunt-jsbeautifier": "latest",
-    "grunt-contrib-connect": "~0.7",
-    "load-grunt-tasks": "~0.4"
-  }
+	"name": "indigo-design",
+	"version": "1.0.0",
+	"private": true,
+	"description": "IndigoPHP default theme design",
+	"homepage": "http://indigophp.com",
+	"author": "Tamás Barta <barta.tamas.d@gmail.com>",
+	"contributors": [
+		"Márk Sági-Kazár <mark.sagikazar@gmail.com>"
+	],
+	"license": "MIT",
+	"devDependencies": {
+		"grunt": "~0.4.5",
+		"grunt-contrib-clean": "~0.6.0",
+		"grunt-contrib-connect": "~0.9.0",
+		"grunt-contrib-copy": "~0.7.0",
+		"grunt-contrib-less": "~0.12.0",
+		"grunt-contrib-uglify": "~0.6.0",
+		"grunt-contrib-watch": "~0.6.0",
+		"grunt-jsbeautifier": "~0.2.0",
+		"grunt-modernizr": "~0.6.0",
+		"grunt-processhtml": "~0.3.0",
+		"load-grunt-tasks": "~1.0.0"
+	}
 }
